--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<p style="color: green;">hello stupid world</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="https://MTM828.github.io/CSS.css">
+    <style>
+    </style>
+
+    <body>
+      <p>hello stupid world</p>
+    </body>
+    
+    <script>
+    </script>
+  </head>
+</html>
