--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="https://MTM828.github.io/CSS.css">
-    <style>
-    </style>
+    <head>
+        <link rel="stylesheet" href="https://mtm828.github.io/CSS.css">
+        <style>
+        </style>
 
-    <body>
-      <p>hello stupid world</p>
-    </body>
+        <body>
+            <p>hello stupid world</p>
+        </body>
     
-    <script>
-    </script>
-  </head>
+        <script>
+        </script>
+    </head>
 </html>
