--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         </style>
 
         <body>
+            <ul class="topNav">
+                <li><a>Link A</a></li>
+                <li><a>Link B</a></li>
+            </ul>
             <p>hello stupid world</p>
         </body>
     
