--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </style>
 
         <body>
+            <h1>Text</h1>
             <ul class="topNav">
                 <li><a>Link A</a></li>
                 <li><a>Link B</a></li>
