--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://mtm828.github.io/CSS.css">
         <style>
         </style>
@@ -10,6 +11,7 @@
             <ul class="topNav">
                 <li><a>Link A</a></li>
                 <li><a>Link B</a></li>
+                <li style="float: right"><div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="customSwitch1"><label class="custom-control-label" for="customSwitch1">Toggle this switch element</label></div>
             </ul>
             <p>hello stupid world</p>
         </body>
