--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap">
         <link rel="stylesheet" href="https://mtm828.github.io/CSS.css">
         <style>
         </style>
@@ -11,7 +10,10 @@
             <ul class="topNav">
                 <li><a>Link A</a></li>
                 <li><a>Link B</a></li>
-                <li style="float: right"><div class="custom-control custom-switch"><input type="checkbox" class="custom-control-input" id="customSwitch1"><label class="custom-control-label" for="customSwitch1">Toggle this switch element</label></div>
+                <li style="float: right">
+                    <label class="switch"><input type="checkbox"></label>
+                    <span class="slider"></span>
+                </li>
             </ul>
             <p>hello stupid world</p>
         </body>
