--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://mtm828.github.io/CSS.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="C:\Users\talib_w8zla93\Documents\CSS.css">
         <style>
         </style>
 
         <body>
             <h1>Text</h1>
-            <ul class="topNav">
-                <li><a>Link A</a></li>
-                <li><a>Link B</a></li>
+            <ul class="topNav" id="topNav">
+                <li><a href="">Link A</a></li>
+                <li><a href="">Link B</a></li>
                 <li style="float: right">
-                    <label class="switch"><input type="checkbox"></label>
-                    <span class="slider"></span>
+                    <a>
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider" onclick="toggleDarkMode()"></span>
+                        </label>
+                    </a>
                 </li>
             </ul>
+            <div class="topNavbarWrapper"><p></p></div>
             <p>hello stupid world</p>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <p>bye stupid world</p>
         </body>
     
-        <script>
+        <script src="C:\Users\talib_w8zla93\Documents\JS.js">
         </script>
     </head>
 </html>
