Fixed failed to load recource error

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://mtm828.github.io/CSS.css">
+        <link rel="stylesheet" href="https://mtm828.github.io/RECOURCES/CSS.css">
         <style>
         </style>
 
@@ -26,7 +26,7 @@
             <p>bye stupid world</p>
         </body>
     
-        <script src="https://mtm828.github.io/JS.js">
+        <script src="https://mtm828.github.io/RECOURCES/JS.js">
         </script>
     </head>
 </html>
