Fixed a tiny problem
I closed an <a> tag with a <p> tag LOL, and I wrote plain text a couple of times rather than using the <p> tag.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div class="topNavbarWrapper"><p></p></div>
             <p>hello stupid world</p>
             <br><br><br><br><br>
-            <a href="">blah</p>
+            <a href="">blah</a>
             <br><br><br><br><br>
             <div class="page-header">
-                peanuts
+                <p>peanuts</p>
             </div>
             <div class="jumbotron">
-                bootstrap is wooorkiinnng
+                <p>bootstrap is wooorkiinnng<p>
             </div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <p>bye stupid world</p>
