--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="topNav" id="topNav">
                 <li><a href="">Link A</a></li>
                 <li><a href="">Link B</a></li>
-                <li style="float: right">
+                <li style="float: right; height: 83px;">
                     <a>
                         <label class="switch">
                             <input type="checkbox">
