--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>MTM828 - Home</title>
+        <link rel="icon" href="mtm828.github.io/RECOURCES/IMAGES/ICON.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://mtm828.github.io/RECOURCES/CSS.css">
