--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
                     </a>
                 </li>
             </ul>
-            <div class="topNavbarWrapper"><p></p></div>
-            <p>hello stupid world</p>
-            <br><br><br><br><br>
-            <a href="">blah</a>
-            <br><br><br><br><br>
-            <div class="page-header">
-                <p>peanuts</p>
+            <div style="padding: 15px;">
+                <div class="topNavbarWrapper"></div>
+                <p>hello stupid world</p>
+                <br><br><br><br><br>
+                <a href="">blah</a>
+                <br><br><br><br><br>
+                <div class="page-header">
+                    <p>peanuts</p>
+                </div>
+                <div class="jumbotron">
+                    <p>bootstrap is wooorkiinnng<p>
+                </div>
+                <br><br><br><br><br>
+                <button onclick="">click to be cursed!</button>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <p>bye stupid world</p>
             </div>
-            <div class="jumbotron">
-                <p>bootstrap is wooorkiinnng<p>
-            </div>
-            <br><br><br><br><br>
-            <button onclick="">click to be cursed!</button>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <p>bye stupid world</p>
         </body>
     
         <script src="https://mtm828.github.io/RECOURCES/JS.js">
