--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         </style>
 
         <body>
-            <h1>Text</h1>
+            <center>
+                <img width="50px" height="50px" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
+                <h1>MTM828</h1>
+            </center>
             <ul class="topNav" id="topNav">
                 <li><a href="">Link A</a></li>
                 <li><a href="">Link B</a></li>
