--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <body>
             <center>
-                <img width="50px" height="50px" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
+                <img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
                 <h1>MTM828</h1>
             </center>
             <ul class="topNav" id="topNav">
