--- a/RECOURCES/TOPNAV.html
+++ b/RECOURCES/TOPNAV.html
@@ -1,7 +1,7 @@
-≤center>
+<div style="text-align: center;">
     <img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
     <h1>MTM828</h1>
-</center>
+</div>
 <ul class="topNav" id="topNav">
     <li><a href="">Link A</a></li>
     <li><a href="">Link B</a></li>
