--- a/RECOURCES/TOPNAV.html
+++ b/RECOURCES/TOPNAV.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" src="https//mtm828.github.io/RESOURCES/CSS.css">
 <div style="text-align: center;">
     <img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
     <h1>MTM828</h1>
