--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
             </ul>
             <div class="topNavbarWrapper"></div>-->
-            <embed type="text/html" src="https://mtm828.github.io/RECOURCES/TOPNAV.html">
+            <embed type="text/html" src="https://mtm828.github.io/RECOURCES/TOPNAV.html" width="100%" height="auto">
             <div style="padding: 15px;">
                 <p>hello stupid world</p>
                 <br><br><br><br><br>
