--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </style>
 
         <body>
-            <!--<center>
+            <center>
                 <img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
                 <h1>MTM828</h1>
             </center>
@@ -27,8 +27,7 @@
                     </a>
                 </li>
             </ul>
-            <div class="topNavbarWrapper"></div>-->
-            <embed type="text/html" src="https://mtm828.github.io/RECOURCES/TOPNAV.html" width="100%" height="100%">
+            <div class="topNavbarWrapper"></div>
             <div style="padding: 15px;">
                 <p>hello stupid world</p>
                 <br><br><br><br><br>
