--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
         </style>
 
         <body>
-            <center>
-                <img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
-                <h1>MTM828</h1>
-            </center>
+            <img style="text-align: center; padding-top: 5px;" width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
+            <h1 style="text-align: center;">MTM828</h1>
             <ul class="topNav" id="topNav">
                 <li><a href="">Link A</a></li>
                 <li><a href="">Link B</a></li>
