--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </style>
 
         <body>
-            <img style="margin-left; auto; margin-right: auto; margin-top: 10px;" width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
+            <img style="margin-left; auto; margin-right: auto; margin-top: 10px; width: 50%;" width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
             <h1 style="text-align: center;">MTM828</h1>
             <ul class="topNav" id="topNav">
                 <li><a href="">Link A</a></li>
