--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li style="float: right; height: 83px;">
                     <a>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" id="darkModeSwitch">
                             <span class="slider" onclick="toggleDarkMode()"></span>
                         </label>
                     </a>
