--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         </style>
 
         <body>
-            <img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
-            <h1 style="text-align: center;">MTM828</h1>
+            <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
+            <h1 style="text-align: center; font-size: 150%;">MTM828</h1>
             <ul class="topNav" id="topNav">
                 <li><a href="">Link A</a></li>
                 <li><a href="">Link B</a></li>
@@ -42,6 +42,10 @@
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 <p>bye stupid world</p>
             </div>
+            <ul class="footer">
+                <li><a href="github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
+                <li><a href="https://mtm828.github.io/index.html">Home</a></li>
+            </ul>
         </body>
     
         <script src="https://mtm828.github.io/RECOURCES/JS.js">
