--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>bye stupid world</p>
             </div>
             <ul class="footer">
-                <li><a href="github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
+                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
                 <li><a href="https://mtm828.github.io/index.html">Home</a></li>
             </ul>
         </body>
