--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="topNav" id="topNav">
                 <li><a href="">Link A</a></li>
                 <li><a href="">Link B</a></li>
-                <li style="float: right; height: 83px;">
+                <li style="float: right; box-sizing: border-box;">
                     <a>
                         <label class="switch">
                             <input type="checkbox" id="darkModeSwitch">
