--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <body>
             <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
-            <h1 style="text-align: center; font-size: 200%;">MTM828</h1>
+            <h1 style="text-align: center; font-size: 200%; border-bottom: none;">MTM828</h1>
             <ul class="topNav" id="topNav">
                 <li><a href="">Link A</a></li>
                 <li><a href="">Link B</a></li>
@@ -30,15 +30,15 @@
                 <br><br><br><br><br>
                 <a href="">blah</a>
                 <br><br><br><br><br>
-                <div class="page-header">
+                <h3>
                     <p>peanuts</p>
-                </div>
+                </h3>
                 <div class="jumbotron">
                     <p>bootstrap is wooorkiinnng<p>
                 </div>
                 <br><br><br><br><br>
                 <button onclick="">click to be cursed!</button>
-                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br>
                 <p>bye stupid world</p>
             </div>
             <ul class="footer">
