Used Google fonts

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <mete name="description" content="MTM828">
-        <link rel="stylesheet" src="https://fonts.googleapis.com/css?family=Sofia">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=abel|alata">
         <link rel="stylesheet" href="https://mtm828.github.io/RECOURCES/CSS.css">
         <style>
         </style>
