--- a/index.html
+++ b/index.html
@@ -31,11 +31,9 @@
                 <br><br><br><br><br>
                 <a href="">blah</a>
                 <br><br><br><br><br>
-                <h3>
-                    <p>peanuts</p>
-                </h3>
+                <h3>peanuts</h3>
                 <div class="jumbotron">
-                    <p>bootstrap is wooorkiinnng<p>
+                    <p>bootstrap is wooorkiinnng<br><b>edit:</b> nvm i ditched bootstrap cuz it sucks >:)</p>
                 </div>
                 <br><br><br><br><br>
                 <button onclick="">click to be cursed!</button>
