--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <br><br><br><br><br>
                 <a href="">blah</a>
                 <br><br><br><br><br>
-                <h3>peanuts</h3>
+                <h3>peanuts yum</h3>
                 <div class="jumbotron">
                     <p>bootstrap is wooorkiinnng<br><b>edit:</b> nvm i ditched bootstrap cuz it sucks >:)</p>
                 </div>
