--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <style>
         </style>
 
-        <body>
+        <body class="transitionsDisabled">
             <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
             <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel;">MTM828</h1>
             <ul class="topNav" id="topNav">
