--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
         <mete name="description" content="MTM828">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel|Alata">
         <link rel="stylesheet" href="https://mtm828.github.io/RECOURCES/CSS.css">
-        <style>
-        </style>
 
         <body>
             <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
@@ -26,7 +24,7 @@
                 </li>
             </ul>
             <div class="topNavbarWrapper"></div>
-            <div style="padding: 15px;">
+            <div class="pageContent">
                 <p>hello stupid world</p>
                 <br><br><br><br><br>
                 <a href="">blah</a>
