--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <title>MTM828 - Home</title>
         <link rel="icon" href="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <mete name="description" content="MTM828">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel|Alata">
         <link rel="stylesheet" href="https://mtm828.github.io/RECOURCES/CSS.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="keywords" content="MTM828, mtm, 828, scratch, github">
+        <meta name="description" content="MTM828">
+        <meta name="author" content="MTM828">
+        <meta http-equiv="refresh" content="10">
+        <meta name="charset" content="utf-8">
         <body>
             <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
             <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel;">MTM828</h1>
