--- a/TESTS/GETJSON.html
+++ b/TESTS/GETJSON.html
@@ -7,6 +7,6 @@
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
         $(document).getJSON("https://mtm828.github.io/TESTS/JSON.json");
-        document.getElementById("JSON").inerHTML="<p>+info.name+"</p>";
+        document.getElementById("JSON").inerHTML="<p>"+info.name+"</p>";
     </script>
 </html>
