--- a/index.html
+++ b/index.html
@@ -11,42 +11,37 @@
         <meta name="author" content="MTM828">
         <meta http-equiv="refresh" content="120">
         <meta name="charset" content="utf-8">
-        <body>
-            <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
-            <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel;">MTM828</h1>
-            <ul class="topNav" id="topNav">
-                <li><a href="">Link A</a></li>
-                <li><a href="">Link B</a></li>
-                <li style="float: right;">
-                    <a>
-                        <label class="switch">
-                            <input type="checkbox" id="darkModeSwitch">
-                            <span class="slider" onclick="toggleDarkMode()"></span>
-                        </label>
-                    </a>
-                </li>
-            </ul>
-            <div class="topNavbarWrapper"></div>
-            <div class="pageContent">
-                <p>hello stupid world</p>
-                <br><br><br><br><br>
-                <a href="">blah</a>
-                <br><br><br><br><br>
-                <h3>peanuts yum</h3>
-                <div class="jumbotron">
-                    <p>bootstrap is wooorkiinnng<br><b>edit:</b> nvm i ditched bootstrap cuz it sucks >:)</p>
-                </div>
-                <br><br><br><br><br>
-                <button onclick="">click to be cursed!</button>
-                <br><br><br><br><br>
-                <p>bye stupid world</p>
-                <ul class="footer">
-                    <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
-                    <li><a href="https://mtm828.github.io/index.html">Home</a></li>
-                </ul>
-            </div>
-        </body>
         <script src="https://mtm828.github.io/RECOURCES/JS.js">
         </script>
     </head>
+    <body>
+        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
+        <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel;">MTM828</h1>
+        <ul class="topNav" id="topNav">
+            <li><a href="">Link A</a></li>
+            <li><a href="">Link B</a></li>
+            <li style="float: right;">
+                <a><label class="switch"><input type="checkbox" id="darkModeSwitch"><span class="slider" onclick="toggleDarkMode()"></span></label></a>
+            </li>
+        </ul>
+        <div class="topNavbarWrapper"></div>
+        <div class="pageContent">
+            <p>hello stupid world</p>
+            <br><br><br><br><br>
+            <a href="">blah</a>
+            <br><br><br><br><br>
+            <h3>peanuts yum</h3>
+            <div class="jumbotron">
+                <p>bootstrap is wooorkiinnng<br><b>edit:</b> nvm i ditched bootstrap cuz it sucks >:)</p>
+            </div>
+            <br><br><br><br><br>
+            <button onclick="">click to be cursed!</button>
+            <br><br><br><br><br>
+            <p>bye stupid world</p>
+            <ul class="footer">
+                <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
+                <li><a href="https://mtm828.github.io/index.html">Home</a></li>
+            </ul>
+        </div>
+    </body>
 </html>
