--- a/TESTS/GETJSON.html
+++ b/TESTS/GETJSON.html
@@ -3,10 +3,11 @@
     <head>
     </head>
     <body>
-        <p id="JSON"></p>
+        <p id="JSON">Just a moment...</p>
     </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-        $(document).getJSON("https://mtm828.github.io/TESTS/JSON.json");
-        document.getElementById("JSON").inerHTML="<p>"+info.name+"</p>";
+    <script>
+        ajax = new XMLHttpRequest();
+        ajax.open("POST", "https://mtm828.github.io/TESTS/JSON.json");
+        ajax.send();
     </script>
 </html>
