--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
         <meta name="author" content="MTM828">
         <meta http-equiv="refresh" content="120">
         <meta name="charset" content="utf-8">
-        <script src="https://mtm828.github.io/RECOURCES/JS.js">
-        </script>
     </head>
     <body>
         <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
@@ -44,4 +42,5 @@
             </ul>
         </div>
     </body>
+        <script src="https://mtm828.github.io/RECOURCES/JS.js"></script>
 </html>
