Looks like I actually do know
LOL, for some reason I just had to switch POST into GET, but I still don't understand why though...

--- a/TESTS/GETJSON.html
+++ b/TESTS/GETJSON.html
@@ -8,7 +8,7 @@
     <script>
         ajax = new XMLHttpRequest();
         ajax.responceType = "json";
-        ajax.open("POST", "https://mtm828.github.io/TESTS/JSON.json");
+        ajax.open("GET", "https://mtm828.github.io/TESTS/JSON.json");
         ajax.send();
         ajax.onReadyStateChange = function() {
             if (ajax.readyState == 4 && ajax.status == 200) {
