--- a/TESTS/GETJSON.html
+++ b/TESTS/GETJSON.html
@@ -12,9 +12,9 @@
         ajax.send();
         ajax.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
-                var data = JSON.parse(this.responseText);
+                var data = JSON.parse(JSON.stringify(this.responseText));
                 elm = document.getElementById("JSON");
-                elm.innerHTML = "<p>" + data + "</p>";
+                elm.innerHTML = "<p>" + data.info.name + "</p>";
             }
         }
     </script>
