--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <meta name="charset" content="utf-8">
     </head>
     <body>
-        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a>
-        <h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel;">MTM828</h1>
+        <a href="https://github.com/mtm828"><img style="margin-top: 10px; margin-left: auto; margin-right: auto; display: block;" width="75px" height="75px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"><h1 style="text-align: center; font-size: 200%; border-bottom: none; font-family: abel;">MTM828</h1></a>
         <ul class="topNav" id="topNav">
             <li><a href="">Link A</a></li>
             <li><a href="">Link B</a></li>
@@ -24,6 +23,7 @@
         </ul>
         <div class="topNavbarWrapper"></div>
         <div class="pageContent">
+            <div stydle="display:none;">
             <p>hello stupid world</p>
             <br><br><br><br><br>
             <a href="">blah</a>
@@ -36,6 +36,7 @@
             <button onclick="">click to be cursed!</button>
             <br><br><br><br><br>
             <p>bye stupid world</p>
+            </div>
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
                 <li><a href="https://mtm828.github.io/index.html">Home</a></li>
