--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
         <div class="topNavbarWrapper"></div>
         <div class="pageContent">
-            <div stydle="display:none;">
+            <div style="display:none;">
             <p>hello stupid world</p>
             <br><br><br><br><br>
             <a href="">blah</a>
