--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             </ul>
         </div>
     </body>
-    <script src="https://mtm828.github.io/RECOURCES/JS.js">
+    <script src="https://mtm828.github.io/RECOURCES/JS.js"></script>
+    <script>
         function initialiseDescription() {
             fetchJson("https://mtm828.github.io/RESOURCES/JSON/ABOUT.json");
             elm = document.getElementById("description"):
