--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <script>
         function initialiseDescription() {
             fetchJson("https://mtm828.github.io/RESOURCES/JSON/ABOUT.json");
-            elm = document.getElementById("description"):
+            elm = document.getElementById("description");
             var description;
             description += json.info.name;
             description += json.hates[0].name;
