--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
     <script src="https://mtm828.github.io/RECOURCES/JS.js"></script>
     <script>
         function initialiseDescription() {
-            fetchJson("https://mtm828.github.io/RESOURCES/JSON/ABOUT.json");
+            json = fetchJson("https://mtm828.github.io/RESOURCES/JSON/ABOUT.json");
             elm = document.getElementById("description");
             var description;
-            description += json.info.name;
-            description += json.hates[0].name;
+            description += json.name.name;
             elm.innerHHTML = description;
         }
         window.onload = initialiseDescription;
