--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             ajax = new XMLHttpRequest();
             ajax.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
-                data = JSON.parse(this.responseText);
+                json = JSON.parse(this.responseText);
             }
             ajax.open("GET", url, true);
             ajax.send();
