--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             </ul>
         </div>
     </body>
-    <script src="https://mtm828.github.io/RECOURCES/JS.js"></script>
-    <script>
+    <script src="https://mtm828.github.io/RECOURCES/JS.js">
         function initialiseDescription() {
             var json;
             ajax = new XMLHttpRequest();
