--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     json = JSON.parse(this.responseText);
                 }
             }
-            ajax.open("GET", url, true);
+            ajax.open("GET", "https://mtm828.github.io/RECOURSES/JSON/ABOUT.json", true);
             ajax.send();
             elm = document.getElementById("description");
             var description;
