--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
             desc += json.name.name;
             elm.innerHHTML = desc;
         }
-        window.onload = initialiseDescription;
+        window.onload = initDesc;
     </script>
 </html>
