--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             ajax.responceType = "json";
             ajax.onreadystatechange = function() {
                 if (this.readyState == 4 && this.status == 200) {
-                    var desc = JSON.parse(this.responseText);
+                    var json += JSON.parse(JSON.parse(JSON.stringify(this.responseText)));
                     elm = document.getElementById("description");
-                    elm.innerHTML = "<p>" + desc.info.name + "</p>";
+                    elm.innerHTML = "<p>" + json.me.name + "</p>";
                 }
             }
             ajax.open("GET", "https://mtm828.github.io/RECOURCES/JSON/ABOUT.json", true);
