--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     var json = JSON.parse(JSON.parse(JSON.stringify(this.responseText)));
                     desc = document.getElementById("description").innerHTML;
                     desc = "<p style=\"text-align: center; font-family: abel;\"> Hey there, I'm " + json.me.name + "!</p><br>";
-                    desc += "<p style=\"text-align: center;\">I code in:
+                    desc += "<p style=\"text-align: center;\">I code in:"
                     desc += "</p><br>"
                 }
             }
