--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br><br><br><br><br>
             <p>bye stupid world</p>
             </div>
-            <p id="description"></p>
+            <p id="description">Just a moment...</p>
             <ul class="footer">
                 <li><a href="https://github.com/mtm828"><img width="50px" height="50px" src="https://avatars2.githubusercontent.com/u/71281115?s=460&v=4"></a></li>
                 <li><a href="https://mtm828.github.io/index.html">Home</a></li>
