--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
                     var json = JSON.parse(JSON.parse(JSON.stringify(this.responseText)));
                     desc = document.getElementById("description");
                     desc.innerHTML = "<p style=\"text-align: center; font-family: abel;\"> Hey there, I'm " + json.me.name + "!</p><br>";
-                    desc.innerHTML += "<p style=\"text-align: center;\">I code in:"
-                    desc.innerHTML += "</p><br>"
+                    desc.innerHTML += "<p style=\"text-align: center;\">I code in:<ul>"
+                    for (i=0; i<json.me.knows.length; i++) {
+                        desc.innerHTML += "<li>" + json.me.knows[i] + "</li>";
+                    }
+                    desc.innerHTML += "</ul></p><br>"
                 }
             }
             ajax.open("GET", "https://mtm828.github.io/RECOURCES/JSON/ABOUT.json", true);
