--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </li>
         </ul>
         <div class="topNavbarWrapper"></div>
-        <p id="loadingScreen" style="position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreen); box-sizing: content-box;"></p>
+        <p id="loadingScreen" style="position: fixed; top: 0; bottom: 0; right: 0; left: 0; width: 100%; height: 100%; background-color: var(--loadingScreenBg); box-sizing: content-box;"></p>
         <div class="pageContent">
             <div style="display:none;">
             <p>hello stupid world</p>
