--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             }
             ajax.open("GET", "https://mtm828.github.io/RECOURCES/JSON/ABOUT.json", true);
             ajax.send();
+            initDesc();
         }
         window.onload = hideLoadingScreen;
-        window.onload += initDesc;
     </script>
 </html>
