--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                 if (this.readyState == 4 && this.status == 200) {
                     var json = JSON.parse(JSON.parse(JSON.stringify(this.responseText)));
                     desc = document.getElementById("description");
-                    desc.innerHTML = "<p style=\"text-align: center; font-family: abel;\">Hey there, I'm " + json.me.name + "!</p><br>";
-                    desc.innerHTML += "<p style=\"text-align: center;\">I code in:</p><ul>"
+                    desc.innerHTML = "<div style=\"text-align: center;><p style=\"font-family: abel;\">Hey there, I'm " + json.me.name + "!</p><br>";
+                    desc.innerHTML += "<p>I code in:</p><ul>"
                     for (i=0; i<json.me.knows.length; i++) {
                         desc.innerHTML += "<li>" + json.me.knows[i] + "</li>";
                     }
-                    desc.innerHTML += "</ul><br>"
+                    desc.innerHTML += "</ul></div><br>"
                 }
             }
             ajax.open("GET", "https://mtm828.github.io/RECOURCES/JSON/ABOUT.json", true);
