--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 if (this.readyState == 4 && this.status == 200) {
                     var json = JSON.parse(JSON.parse(JSON.stringify(this.responseText)));
                     desc = document.getElementById("description");
-                    desc.innerHTML = "<div style=\"text-align: center;\"><p style=\"font-family: abel;\">Hey there, I'm " + json.me.name + "!</p><br>";
+                    desc.innerHTML = "<div style=\"text-align: center; transition: 0s;\"><p style=\"font-family: abel;\">Hey there, I'm " + json.me.name + "!</p><br>";
                     desc.innerHTML += "<p>I code in:</p><ul>"
                     for (i=0; i<json.me.knows.length; i++) {
                         desc.innerHTML += "<li>" + json.me.knows[i] + "</li>";
